sf-hrms/force-app/main/default/objects/Shift__c/fields/Full_Day_Hours__c.field-meta.xml
<CustomField><fullName>Full_Day_Hours__c</fullName><label>Full Day Hours</label><type>Number</type><precision>4</precision><scale>1</scale><defaultValue>8</defaultValue></CustomField>