sf-hrms/force-app/main/default/objects/Shift__c/fields/Grace_Period_Minutes__c.field-meta.xml
<CustomField><fullName>Grace_Period_Minutes__c</fullName><label>Grace Period (Minutes)</label><type>Number</type><precision>3</precision><scale>0</scale><defaultValue>15</defaultValue></CustomField>