sf-hrms/force-app/main/default/objects/Shift__c/fields/Half_Day_Hours__c.field-meta.xml
<CustomField><fullName>Half_Day_Hours__c</fullName><label>Half Day Hours</label><type>Number</type><precision>4</precision><scale>1</scale><defaultValue>4</defaultValue></CustomField>