sf-hrms/force-app/main/default/objects/Shift__c/fields/Is_Night_Shift__c.field-meta.xml
<CustomField><fullName>Is_Night_Shift__c</fullName><label>Night Shift</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>