sf-hrms/force-app/main/default/objects/Shift__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Text</type>
    <length>10</length>
</CustomField>